next class work on the content of the scrollify

--- a/index3.html
+++ b/index3.html
@@ -28,8 +28,8 @@
       Open Offcanvas Sidebar
     </button>
     <div id="section1" class="container-fluid bg-infromation text-dark" style="padding:100px 20px;">
-      <h1></h1>
-      <p></p>
+      <h1>Infromation About Page</h1>
+      <p>This page was made mainly through bootstrap and was created in order to be able to practice. This is the reason that the topics are all over the place. So, please excuse the random words.</p>
       <div class="offcanvas offcanvas-start" id="demo">
         <div class="offcanvas-header">
           <h1 class="offcanvas-title">Links to the other pages.</h1>
@@ -54,6 +54,7 @@
         Open Offcanvas Sidebar
       </button>
     </div>
+
     <div id="section2" class="container-fluid bg-white text-dark" style="padding:100px 20px;">
       <h1></h1>
       <p></p>
