finsihed the content of the scrollify

--- a/index3.html
+++ b/index3.html
@@ -30,6 +30,29 @@
     <div id="section1" class="container-fluid bg-infromation text-dark" style="padding:100px 20px;">
       <h1>Infromation About Page</h1>
       <p>This page was made mainly through bootstrap and was created in order to be able to practice. This is the reason that the topics are all over the place. So, please excuse the random words.</p>
+      <p> I am about to finish Gilmore Girls, and everyone is telling me that i should watch a year in the life once I finish. But, I'm not sure if I can deal with more of Rory being self destructive. Anyways I cant way to go home and be able to simply go on my bike instead of having to run outside #break.</p>
+      <p> Here is some infromation about hedgehogs (my favorite animals) by <a href="https://animals.sandiegozoo.org/animals/hedgehog"> the San Diego Zoo</a>:</p>
+      <p>The hedgehog is a short and stout little mammal that is sometimes called a pincushion with legs! Most mammals have fur or hair that is somewhat flexible and soft. But the hair on the back of a hedgehog is a thick layer of spikes (or modified hairs) known as quills. These quills are made of keratin, the same stuff our hair and fingernails are made of.
+
+Hedgehogs can be white or light brown to black, with several shades found in bands along their quills. Their belly, face, and neck are covered in coarse hair. Some hedgehogs have a dark brown or black mask across their eyes. These interesting critters have small but powerful legs and big feet with five toes each. The exception is the four-toed hedgehog that has—you guessed it!—four toes. Curved claws make hedgehogs amazing diggers. A long snout with a wet nose gives them an excellent sense of smell. Their ears are large compared to body size, giving the spiky little creatures a good sense of hearing.
+
+Is that a porcupine? No! The hedgehog's closest relatives are moonrats, shrews, and moles. People often confuse porcupines and hedgehogs because the two share a common characteristic: quills!
+
+The hedgehog’s best defense against predators is its spiky outer armor. With about 3,000 to 5,000 quills covering its back, the hedgehog can protect itself from predators that think it would make a tasty snack. When threatened, the hedgehog raises its quills upright in a crisscross pattern, making its body pointy and sharp. It uses its belly muscles, back muscles, and extra skin to tuck in its head, legs, and tail to curl into a complete ball, protecting its soft belly. The solid ball of spikes is hard for predators to open.
+
+Ancient Roman and Chinese folklore tell tales of hedgehogs carrying fruit on their quills. Although fruit, leaves, and twigs may get stuck on one of these “pincushions,” hedgehogs do not use their quills to carry food. And unlike the hedgehogs from the book Alice in Wonderland or the popular video game “Sonic the Hedgehog,” they cannot roll along when curled into a ball.
+
+Perhaps the biggest myth of all is that a hedgehog can shoot its quills! Can you shoot the hair out of your head? Just like your hair, a hedgehog’s quills can fall out or break off, but the hedgehog cannot shoot its quills to defend itself.
+
+In Europe, people consider hedgehogs to be friends of backyards and gardens. These hedgehogs are often found in flower beds, vegetable gardens, and compost heaps. Some gardeners make nests of straw, hay, or boxes to attract hedgehogs. In turn, the hedgehogs eat snails, slugs, and other garden pests.</p>
+<p>Baby hedgehogs are called hoglets or piglets. An adult female usually gives birth to four to seven young once or twice a year. Newborns look like chubby white caterpillars. They do have quills at birth, but these are soft and flexible. During birth, the quills are covered by puffy, fluid-filled skin to avoid hurting the mother. Within a day, the hoglet’s skin shrinks, and about 150 white quills appear.
+
+At a week old, hoglets may push each other over the milk supply. By the time they are a month old, they have opened their eyes, and their back has dense, dark quills. The mother takes her hoglets on foraging trips, showing them how to find food.
+
+If a young hedgehog is separated from its mother, it may make a twittering or a whistle sound to let Mom know where to find it. Adult hedgies squeal and grunt when they are excited or afraid. They also grunt while foraging.
+
+Depending on the species, it takes 6 to 13 weeks for the hoglets to be weaned. When they are ready, they leave their mother to begin a new life as a solo hedgie.
+</p>
       <div class="offcanvas offcanvas-start" id="demo">
         <div class="offcanvas-header">
           <h1 class="offcanvas-title">Links to the other pages.</h1>
@@ -56,12 +79,91 @@
     </div>
 
     <div id="section2" class="container-fluid bg-white text-dark" style="padding:100px 20px;">
-      <h1></h1>
-      <p></p>
+      <h1>Hello World!!!</h1>
+      <p>Here is some information about porcupines by <a href="https://weilerwoodsforwildlife.com/american-porcupines/">Weiler Woods for Wildlife:</a></p>
+      <p>Out of the 29 species of porcupine (wow, that seems like a lot), there is only one living in the US or Canada. It is the American porcupine, also called the Canadian porcupine. And take a guess at how many porcupine quills the American porcupine has on its 20-pound body? A couple of hundred? No, try over 30,000 quills on just one porcupine. Amazing!</p>
+      <p>  There are many false myths about these incredible animals. Myth 1: They throw their quills at people or animals when threatened. Nope, you have to come in contact with the porcupine quills to have them stick you. Myth 2: Porcupine quills will fall out on their own if attached. No again. You have to pull them out which is not an easy or painless task. If you or your animal gets impaled, seek help quickly so the quills don’t become further embedded.</p>
+      <p>When a porcupine has babies, they are called porcupettes. And are they ever cute! American porcupines usually only have one baby born each year and their quills harden about an hour after birth.
+Porcupines are herbivores and especially like wood. Plus they have an intense craving for salt. So if you see wood-handled tools or canoe paddles knawed on, it just might be a porcupine.
+They also like to eat outhouses, if you happen to have one. Now that is curious. But think about it. Outhouses collect a lot of urine which is loaded with salt. Ahh, disgusting but now I see.
+When threatened, the porcupine will give off a strong odor to warn off predators. If that doesn’t work, they will squeeze the muscles near the skin, making their quills stand out. If the predator gets too close, they will get a face full of porcupine quills. Yikes!
+And those quills are hollow which helps the porcupine float making them very good swimmers. Hmm, they climb trees and swim. Our kind of sports!
+A porcupine group is called a prickle. How appropriate!</p>
+      <div class="offcanvas offcanvas-start" id="demo">
+        <div class="offcanvas-header">
+          <h1 class="offcanvas-title">Links to the other pages.</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+          <p> In order to get back to other pages, just click on the page you have desired.</p>
+          <ul class="pages">
+            <li>
+              <a class="pagetext" href="index.html">Home Page</a>
+            </li>
+            <li>
+              <a class="pagetext" href="index1.html">Contact Page</a>
+            </li>
+            <li>
+              <a class="pagetext" href="index2.html">Girlboss Page</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+        Open Offcanvas Sidebar
+      </button>
     </div>
     <div id="section3" class="container-fluid bg-infromation text-dark" style="padding:100px 20px;">
-      <h1></h1>
-      <p></p>
+      <h1>Enjoy your stay!</h1>
+      <p>Here is one of the poems that has been my favorite since I was 10 and found out what poems are. It's by Dylan Thomas and was in my favorite book when I was younger by the way...</p>
+      <p>Do not go gentle into that good night,
+Old age should burn and rave at close of day;
+Rage, rage against the dying of the light.
+
+Though wise men at their end know dark is right,
+Because their words had forked no lightning they
+Do not go gentle into that good night.
+
+Good men, the last wave by, crying how bright
+Their frail deeds might have danced in a green bay,
+Rage, rage against the dying of the light.
+
+Wild men who caught and sang the sun in flight,
+And learn, too late, they grieved it on its way,
+Do not go gentle into that good night.
+
+Grave men, near death, who see with blinding sight
+Blind eyes could blaze like meteors and be gay,
+Rage, rage against the dying of the light.
+
+And you, my father, there on the sad height,
+Curse, bless, me now with your fierce tears, I pray.
+Do not go gentle into that good night.
+Rage, rage against the dying of the light.
+      </p>
+      <div class="offcanvas offcanvas-start" id="demo">
+        <div class="offcanvas-header">
+          <h1 class="offcanvas-title">Links to the other pages.</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+          <p> In order to get back to other pages, just click on the page you have desired.</p>
+          <ul class="pages">
+            <li>
+              <a class="pagetext" href="index.html">Home Page</a>
+            </li>
+            <li>
+              <a class="pagetext" href="index1.html">Contact Page</a>
+            </li>
+            <li>
+              <a class="pagetext" href="index2.html">Girlboss Page</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+        Open Offcanvas Sidebar
+      </button>
     </div>
   </body>
 </html>
